# DurHack-2024

./: README.md  db-init-job.yaml
core/: .env  Cargo.toml  Dockerfile
core/src/: db.rs  main.rs  metrics.rs  models.rs
facade/: Cargo.toml  Dockerfile
facade/src/: api.rs  kube_client.rs  main.rs  metrics.rs  redis_queue.rs
grafana/provisioning/dashboards/: main.yaml
grafana/provisioning/datasources/: datasource.yaml  main.json
k8s/: api-core-autoscaler.yaml  api-core-deployment.yaml  api-facade-autoscaler.yaml  api-facade-deployment.yaml  grafana-datasource.yaml  grafana-deployment.yaml  mongodb-deployment.yaml  prometheus-deployment.yaml  redis-deployment.yaml
prometheus/: prometheus.yaml
