[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.10", features = ["attributes"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
redis = { version = "0.27.5", features = ["aio", "tokio-comp", "async-std-comp"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"  # for Prometheus metrics
lazy_static = "1.4"  # for lazy_static! macro
mongodb = "3.1.0"
