[package]
name = "facade"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.10", features = ["attributes"] }
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.27.5", features = ["aio", "tokio-comp", "async-std-comp"]}
prometheus = "0.13"  # for Prometheus metrics
lazy_static = "1.4"  # for lazy_static! macro